<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediQ</string>
    <string name="settings">Settings</string>
    <string name="thank_you_1">Dear</string>
    <string name="thank_you_2">, thank you for finishing the questionnaire!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="answer_first">Please select your answer first.</string>
    <string name="answer_question">Please answer this question first.</string>
    <string name="auto_close_1">This window will close automatically in</string>
    <string name="option_dialog">You have not answered all non-required questions, would you like to go back and answer them?</string>
    <string name="accessibility_settings">Accessibility settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auto_close_2">seconds.</string>
    <string name="powered_by">Powered by:</string>
    <string name="next_question">Save and Next</string>
    <string name="previous_question">Save and Previous</string>
    <string name="skip_question">Skip question</string>
    <string name="answer_here_hint">Click here and start typing your answer.</string>
    <string name="server_ip_address">Server IP Address</string>
    <string name="new_search">New search</string>
    <string name="one_moment_please">One moment please &#8230;</string>
    <string name="questionnaires_available">Questionnaires available to</string>
    <string name="no_available_questionnaires">No available questionnaires found for</string>
    <string name="close">Close</string>
    <string name="submit_answers">Submit answers</string>
    <string name="no_disability">No disability</string>
    <string name="high_contrast_mode">High contrast mode</string>
    <string name="advanced_accessibility_settings">Advanced accessibility settings</string>
    <string name="select_disability">Please select disability:</string>
    <string name="no_server_connection">The application was unable to connect to the server.\nPlease check if the server is running and if the connection is working.</string>
    <string name="ok">OK</string>
    <string name="mediq_logo_cd">MediQ logo</string>
    <string name="doctors_video_cd">Doctor\'s introductory video.</string>

    <!-- Patient detail activity -->
    <string name="title_activity_patient_detail">PatientDetailActivity</string>
    <string name="patient_details">Patient details:</string>
    <string name="search_for_patient">Search for patient:</string>
    <string name="patient_nhs">Patient\'s NHS number</string>
    <string name="get_patient">Get Patient</string>
    <string name="confirm_patient_details">Confirm patient details</string>
    <string name="incorrect_nhs_format">Incorrect NHS number format.</string>
    <string name="no_patient_found">No patient found for this NHS number.</string>
    <string name="title_activity_available_questionnaires">AvailableQuestionnairesActivity</string>

</resources>