<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PatientDetailActivity" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Login progress -->

	<LinearLayout
        android:id="@+id/login_status_patient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/mediq_blue"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/spinnerPatientDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" 
            android:src="@drawable/loader"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/one_moment_please"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <!-- Search form -->

    <ScrollView
        android:id="@+id/search_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mediq_blue"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        
	        <ImageView 
	        	android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:paddingLeft="30dp"
	            android:paddingRight="30dp"
	            android:paddingTop="15dp"
	            android:paddingBottom="10dp"
	            android:src="@drawable/mediq_logo"/>
	        
	        <RelativeLayout
	            style="@style/LoginFormContainer"
	            android:orientation="vertical"
	            android:layout_gravity="center"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/searchForPatient"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/white"
	                android:fontFamily="sans-serif-light"
	                android:text="@string/search_for_patient"
	                android:layout_marginLeft="3dp"
	                android:maxLines="1"
	                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
	                android:singleLine="true" 
	                style="?android:attr/textAppearanceLarge"/>
	
	            <EditText
	                android:id="@+id/patientNHS"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/searchForPatient"
	                android:hint="@string/patient_nhs"
	                android:inputType="number"
	                android:maxLines="1"
	                android:singleLine="true"
	                android:fontFamily="sans-serif-light"
		            android:ems="22"
		            android:background="@android:drawable/edit_text"
		            style="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />
	
				<Button
			        android:id="@+id/getPatient"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/patientNHS"
			        android:layout_alignLeft="@id/patientNHS"
			        android:layout_alignRight="@id/patientNHS"
			        android:layout_marginLeft="3dp"
			        android:layout_marginRight="3dp"
			        android:layout_marginTop="16dp"
			        android:onClick="onClick"
			        android:fontFamily="sans-serif-light"
			        android:background="@color/button_background_color"
			        style="?android:attr/textAppearanceLarge"
			        android:text="@string/get_patient" />
	     
	        </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    
    <!-- Patient details -->

    <ScrollView
        android:id="@+id/patient_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mediq_blue"
        android:visibility="gone" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TextView
                android:id="@+id/patient_details_text"
                android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:layout_marginBottom="16dp"
            	android:fontFamily="sans-serif-light"
            	android:layout_gravity="center"
            	android:textColor="@color/white"
            	android:textStyle="bold"
            	android:textSize="35sp"
            	android:text="@string/patient_details" />
            
            <TextView
                android:id="@+id/patient_name"
                android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:layout_marginBottom="16dp"
            	android:fontFamily="sans-serif-light"
            	android:layout_gravity="center"
            	android:textColor="@color/white"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
            
             <TextView
                android:id="@+id/patient_dob"
                android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:layout_marginBottom="16dp"
            	android:fontFamily="sans-serif-light"
            	android:layout_gravity="center"
            	android:textColor="@color/white"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
             
             <TextView
                android:id="@+id/patient_postcode"
                android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:layout_marginBottom="16dp"
            	android:fontFamily="sans-serif-light"
            	android:layout_gravity="center"
            	android:textColor="@color/white"
            	android:textAppearance="?android:attr/textAppearanceLarge" />
             
             <TextView
                android:id="@+id/patient_disability"
                android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:layout_marginBottom="16dp"
            	android:fontFamily="sans-serif-light"
            	android:layout_gravity="center"
            	android:textColor="@color/white"
            	android:textAppearance="?android:attr/textAppearanceLarge" />

            <RelativeLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="3dp"
		        android:layout_marginRight="3dp"> 
            
	            <Button
	                android:id="@+id/confirm"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:paddingLeft="32dp"
	                android:paddingRight="32dp"
	                android:onClick="onClick"
			        android:fontFamily="sans-serif-light"
			        android:background="@color/button_background_color"
			        style="?android:attr/textAppearanceLarge"
			        android:text="@string/confirm_patient_details" />
	            
	            <Button
			        android:id="@+id/newSearch"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/confirm"
			        android:layout_alignLeft="@id/confirm"
			        android:layout_alignRight="@id/confirm"
			        android:layout_marginLeft="3dp"
			        android:layout_marginRight="3dp"
			        android:layout_marginTop="16dp"
			        android:onClick="onClick"
			        android:fontFamily="sans-serif-light"
			        android:background="@color/button_background_color"
			        style="?android:attr/textAppearanceLarge"
			        android:text="@string/new_search" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
